syntax = "proto3";

package toServerSubscribe;

option go_package = "./protocol/toServer/reqNetSvrStatus;reqNetSvrStatus";

//获取网关的状态
message ReqNetSvrStatus {
  //自定义的cmd，网关会原样回传给工作进程
  int32 cmd = 1;
}